--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,9 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.CSE4086_HW1_BMI_Calculator" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/navy</item>
+        <item name="colorPrimaryVariant">@color/navy</item>
+        <item name="android:statusBarColor">@color/navy</item>
     </style>
 
     <style name="Theme.CSE4086_HW1_BMI_Calculator" parent="Base.Theme.CSE4086_HW1_BMI_Calculator" />
