--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/height"
-            android:hint="Enter Height in CM"
+            android:hint="Enter Height in M"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
